<resources>
    <string name="app_name">E-Vaccination</string>
    <string name="e_vaccination">E-vaccination</string>
    <string name="parent_login">Parent Log-in</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="hospital_login">Hospital Login</string>
    <string name="hospital_register">Hospital Register</string>
    <string name="protect_yourself_and_family_by_vaccinating">Protect Yourself and Family by Vaccinating</string>
    <string name="parent">Parent</string>
    <string name="hospital">Hospital</string>
    <string name="title_activity_hospital_drawer">HospitalDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_open">Open</string>
    <string name="menu_close">Close</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hospital_appointment_s">Hospital Appointment\'s</string>
</resources>