<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hospital.HospitalLogin">

    <View
        android:layout_width="204dp"
        android:layout_height="196dp"
        android:layout_marginStart="328dp"
        android:layout_marginTop="-26dp"
        android:background="@drawable/ellipse_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:layout_width="204dp"
        android:layout_height="196dp"
        android:layout_marginStart="237dp"
        android:layout_marginTop="-107dp"
        android:background="@drawable/ellipse_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <View
        android:layout_width="204dp"
        android:layout_height="196dp"
        android:layout_marginStart="-92dp"
        android:layout_marginTop="569dp"
        android:background="@drawable/ellipse_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <View
        android:layout_width="204dp"
        android:layout_height="196dp"
        android:layout_marginTop="665dp"
        android:background="@drawable/ellipse_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <View
        android:id="@+id/eVaccination"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/hospital"
        android:backgroundTint="@color/design_default_color_primary_variant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="90dp"/>


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:text="Welcome!"
        android:fontFamily="@font/poppinsbold"
        android:textSize="35sp"
        android:textStyle="bold"
        android:letterSpacing="0.08"
        android:textColor="#020202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eVaccination"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hospital Log-in"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="158dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eVaccination" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/password"
        android:layout_marginStart="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="50dp"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:background="@drawable/rounded_edittext"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Email"
        android:autofillHints="" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/login"
        android:layout_marginStart="70dp"
        android:layout_marginTop="560dp"
        android:layout_marginEnd="70dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/GoToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:padding="15dp"
        android:textColor="#020202"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>